# DAIoT_WiFi_admin_y_web_server

components/http_server/: CMakeLists.txt  html_page_device_data.html  html_page_index.html  html_page_wifi_config.html  http_server.c  http_server.h  wsvr_miscs.c  wsvr_miscs.h
components/wifi_manager/: wfm_miscs.c  wfm_miscs.h  wifi_manager.c  wifi_manager.h
main/: main.c
